@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{685, 75}, {1020, 1095}}</string>
+	<string>{{662, 76}, {1020, 1095}}</string>
 </dict>
 </plist>
